--- a/language/mn.json
+++ b/language/mn.json
@@ -26,6 +26,9 @@
             "description": "<h3> Сонголт болгон харуулах зураг. Альтернатив текстийг тайланд ашигладаг.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Зөв"
           }
         ]
@@ -98,6 +101,7 @@
         },
         {
           "label": "Хэсгийн харьцаа",
+          "description": "Хувилбаруудын харьцааг сонгоно уу",
           "options": [
             {
               "label": "Автомат"
@@ -114,8 +118,7 @@
             {
               "label": "1:1"
             }
-          ],
-          "description": "Хувилбаруудын харьцааг сонгоно уу"
+          ]
         },
         {
           "label": "Мөр бүрт хамгийн их хувилбарууд",
@@ -161,16 +164,16 @@
           "default": "Шийдлийг харуулах"
         },
         {
-          "default": "Шийдлийг харуул. Зөв сонголтуудыг тэмдэглэнэ.",
-          "label": "\"Шийдэл харуулах\" товчлуурын туслах технологийн тайлбар"
+          "label": "\"Шийдэл харуулах\" товчлуурын туслах технологийн тайлбар",
+          "default": "Шийдлийг харуул. Зөв сонголтуудыг тэмдэглэнэ."
         },
         {
           "label": "Зөв хариулт (харагдахгүй)",
           "default": "Зөв хариулт"
         },
         {
-          "default": "Буруу хариулт",
-          "label": "Буруу хариулт (харагдахгүй)"
+          "label": "Буруу хариулт (харагдахгүй)",
+          "default": "Буруу хариулт"
         },
         {
           "label": "Сонголтыг шалгах ёстой байсан",
@@ -185,8 +188,8 @@
           "default": "Шийдвэрийг үзэхийн өмнө хариулна уу"
         },
         {
-          "default": "Дахин оролдох",
-          "label": "\"Дахин оролдох\" товчлуурын текст"
+          "label": "\"Дахин оролдох\" товчлуурын текст",
+          "default": "Дахин оролдох"
         },
         {
           "label": "\"Дахин оролдох\" товчлуурын туслах технологийн тайлбар",
@@ -242,6 +245,10 @@
         {
           "label": "Зураггүй тохиолдолд харуулах Өөр текст",
           "default": "Өөр текст дутуу байна"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
