--- a/language/ru.json
+++ b/language/ru.json
@@ -26,6 +26,9 @@
             "description": "<h3> Изображение для отображения в качестве выбора. Альтернативный текст используется в отчете.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Правильно"
           }
         ]
@@ -177,7 +180,7 @@
           "default": "Должно быть проверено"
         },
         {
-         "label": "Опция не должна быть отмечена",
+          "label": "Опция не должна быть отмечена",
           "default": "Не должен был проверяться"
         },
         {
@@ -242,6 +245,10 @@
         {
           "label": "Текст, если для изображения отсутствует замещающий текст",
           "default": "Отсутствует альтернативный текст"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
