--- a/language/sr.json
+++ b/language/sr.json
@@ -26,6 +26,9 @@
             "description": "<h3> Слика за приказ по избору. Извештај користи алтернативни текст.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Тачно"
           }
         ]
@@ -242,6 +245,10 @@
         {
           "label": "Текст ако за слику недостаје алтернативни текст",
           "default": "Недостаје алтернативни текст."
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
