--- a/language/uk.json
+++ b/language/uk.json
@@ -26,6 +26,9 @@
             "description": "<h3> Зображення для відображення як вибір. Альтернативний текст використовується у звіті.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Правильно"
           }
         ]
@@ -177,7 +180,7 @@
           "default": "Повинно бути перевірено"
         },
         {
-         "label": "Опція не повинна бути відзначена",
+          "label": "Опція не повинна бути відзначена",
           "default": "Не повинен був перевірятися"
         },
         {
@@ -242,6 +245,10 @@
         {
           "label": "Текст, якщо для зображення відсутній текст, що заміщає",
           "default": "Відсутній альтернативний текст"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
