--- a/language/.en.json
+++ b/language/.en.json
@@ -26,6 +26,9 @@
             "description": "<h3> Image to display as the choice. The alternative text is used by the report.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Correct"
           }
         ]
@@ -242,6 +245,10 @@
         {
           "label": "Text if alt text is missing for an image",
           "default": "Alt text missing"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
