--- a/language/el.json
+++ b/language/el.json
@@ -26,6 +26,9 @@
             "description": "<h3> Εικόνα που θα εμφανίζεται ως επιλογή. Το εναλλακτικό κείμενο χρησιμοποιείται από την αναφορά.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Σωστό"
           }
         ]
@@ -242,6 +245,10 @@
         {
           "label": "Κείμενο εάν λείπει το εναλλακτικό κείμενο για μια εικόνα",
           "default": "Λείπει το εναλλακτικό κείμενο"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
