--- a/language/ka.json
+++ b/language/ka.json
@@ -16,20 +16,23 @@
       "label": "შეკითხვა"
     },
     {
+      "label": "ხელმისაწვდომი ვარიანტები",
+      "entity": "ვარიანტი",
       "field": {
+        "label": "ვარიანტი",
         "fields": [
           {
             "label": "მედია",
             "description": "<h3> გამოსახულების ჩვენება, როგორც არჩევანი. ალტერნატიული ტექსტი გამოიყენება მოხსენებაში.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "სწორია"
           }
-        ],
-        "label": "ვარიანტი"
-      },
-      "label": "ხელმისაწვდომი ვარიანტები",
-      "entity": "ვარიანტი"
+        ]
+      }
     },
     {
       "label": "საერთო გამოხმაურება",
@@ -59,6 +62,8 @@
       ]
     },
     {
+      "label": "ქცევის პარამეტრები",
+      "description": "ეს პარამეტრები მოგცემთ დავალების ქცევის კონტროლის საშუალებას.",
       "fields": [
         {
           "label": "დაუშვი \"თავიდან ცდის\" ღილაკი"
@@ -80,6 +85,8 @@
           "label": "მოითხოვე პასუხის დაფიქსირება, სანამ ამოხსნა გამოჩნდება"
         },
         {
+          "label": "შეკითხვის ტიპი",
+          "description": "აირჩიე შეკითხვის შესახედაობა და ქცევა.",
           "options": [
             {
               "label": "ავტომატური"
@@ -90,9 +97,7 @@
             {
               "label": "ერთი არჩევანი (რადიო ღილაკები)"
             }
-          ],
-          "label": "შეკითხვის ტიპი",
-          "description": "აირჩიე შეკითხვის შესახედაობა და ქცევა."
+          ]
         },
         {
           "label": "ასპექტის თანაფარდობა",
@@ -137,9 +142,7 @@
           "label": "გადალახვის პროცენტი",
           "description": "ამ პარამეტრს ხშირად არანაირი ეფექტი არ ექნება. ეს არის მთლიანი ქულის პროცენტი, რომელიც საჭიროა 1 ქულის მისაღებად, როდესაც ჩართულია ერთი ქულა მთელი დავალების შესრულებისთვის და xAPI განცხადებებში result.success-ის მისაღებად."
         }
-      ],
-      "label": "ქცევის პარამეტრები",
-      "description": "ეს პარამეტრები მოგცემთ დავალების ქცევის კონტროლის საშუალებას."
+      ]
     },
     {
       "label": "მომხმარებლის ინტერფეისი",
@@ -242,6 +245,10 @@
         {
           "label": "ტექსტი, თუ ალტერნატიული ტექსტი აკლია სურათს",
           "default": "ალტერნატიული ტექსტი აკლია"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
       ]
     }
