--- a/language/lt.json
+++ b/language/lt.json
@@ -26,6 +26,9 @@
             "description": "<h3> Image to display as the choice. The alternative text is used by the report.</h3>"
           },
           {
+            "label": "Poster image"
+          },
+          {
             "label": "Teisingai"
           }
         ]
@@ -142,6 +145,7 @@
       ]
     },
     {
+      "label": "User interface",
       "fields": [
         {
           "label": "Tekstas mygtukui „Tikrinti“",
@@ -197,6 +201,7 @@
           "default": "You got :num out of :total points"
         },
         {
+          "label": "Check confirmation dialog",
           "fields": [
             {
               "label": "Header text",
@@ -214,8 +219,7 @@
               "label": "Confirm button label",
               "default": "Finish"
             }
-          ],
-          "label": "Check confirmation dialog"
+          ]
         },
         {
           "label": "Retry confirmation dialog",
@@ -241,9 +245,12 @@
         {
           "label": "Text if alt text is missing for an image",
           "default": "Alt text missing"
+        },
+        {
+          "label": "Close modal button label",
+          "default": "Close modal"
         }
-      ],
-      "label": "User interface"
+      ]
     }
   ]
 }
