--- a/language/ko.json
+++ b/language/ko.json
@@ -23,7 +23,7 @@
         "fields": [
           {
             "label": "미디어",
-            "description": "<h3> 선택하도록 표시할 이미지. 대체 텍스트는 보고서에서 사용됩니다.</h3>"
+            "description": "Media to display as a choice."
           },
           {
             "label": "Poster image"
