Update el.json with new translation for ShowSolutionButton 2

--- a/language/el.json
+++ b/language/el.json
@@ -69,7 +69,7 @@
           "label": "Ενεργοποίηση του κουμπιού \"Επανάληψη\""
         },
         {
-          "label": "Ενεργοποίηση του κουμπιού \"Εμφάνιση Απάντησης\""
+          "label": "Ενεργοποίηση του κουμπιού \"Εμφάνιση απάντησης\""
         },
         {
           "label": "Εμφάνιση διαλόγου επιβεβαίωσης κατά τον έλεγχο"
@@ -161,11 +161,11 @@
         },
         {
           "label": "Κείμενο για το κουμπί \"Εμφάνιση Απάντησης\"",
-          "default": "Εμφάνιση Απάντησης"
+          "default": "Εμφάνιση απάντησης"
         },
         {
           "label": "Περιγραφή υποστηρικτικής τεχνολογίας για το κουμπί \"Εμφάνιση Απάντησης\"",
-          "default": "Εμφάνιση της Απάντησης. Οι σωστές επιλογές θα επισημαίνονται."
+          "default": "Εμφάνιση της απάντησης. Οι σωστές επιλογές θα επισημαίνονται."
         },
         {
           "label": "Σωστή απάντηση (δεν εμφανίζεται)",
