--- a/language/el.json
+++ b/language/el.json
@@ -69,7 +69,7 @@
           "label": "Ενεργοποίηση του κουμπιού \"Επανάληψη\""
         },
         {
-          "label": "Ενεργοποίηση του κουμπιού \"Εμφάνιση λύσης\""
+          "label": "Ενεργοποίηση του κουμπιού \"Εμφάνιση απάντησης\""
         },
         {
           "label": "Εμφάνιση διαλόγου επιβεβαίωσης κατά τον έλεγχο"
@@ -160,12 +160,12 @@
           "default": "Ελέγξτε τις απαντήσεις. Οι απαντήσεις θα επισημαίνονται ως σωστές, λανθασμένες ή απαντημένες."
         },
         {
-          "label": "Κείμενο για το κουμπί \"Εμφάνιση λύσης\"",
-          "default": "Εμφάνιση λύσης"
+          "label": "Κείμενο για το κουμπί \"Εμφάνιση Απάντησης\"",
+          "default": "Εμφάνιση απάντησης"
         },
         {
-          "label": "Περιγραφή υποστηρικτικής τεχνολογίας για το κουμπί \"Εμφάνιση λύσης\"",
-          "default": "Εμφάνιση της λύσης. Οι σωστές επιλογές θα επισημαίνονται."
+          "label": "Περιγραφή υποστηρικτικής τεχνολογίας για το κουμπί \"Εμφάνιση Απάντησης\"",
+          "default": "Εμφάνιση της απάντησης. Οι σωστές επιλογές θα επισημαίνονται."
         },
         {
           "label": "Σωστή απάντηση (δεν εμφανίζεται)",
